// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Translate(CommentBox)
  containerStyle={
    Object {
      "backgroundColor": "#C5C7CB",
    }
  }
  hideActions={true}
  onCancel={[Function]}
  onSubmit={[Function]}
  placeholderTextKey="celebrateCommentBox:placeholder"
/>
`;

exports[`renders editing correctly 1`] = `
<Translate(CommentBox)
  containerStyle={
    Object {
      "backgroundColor": "#C5C7CB",
    }
  }
  editingComment={
    Object {
      "content": "test",
      "id": "edit",
    }
  }
  hideActions={true}
  onCancel={[Function]}
  onSubmit={[Function]}
  placeholderTextKey="celebrateCommentBox:placeholder"
/>
`;
